/*
 * Copyright IBM 2025
 */
apply plugin: 'java-library'
apply plugin: 'jacoco'  // Add JaCoCo plugin

// Apply the copyright hook
apply from: '../copyright-hook.gradle'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

// Add repositories for dependency resolution
repositories {
    mavenCentral()
    mavenLocal()
}

// Configure source sets to separate main and test code
sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
    }
    test {
        java {
            srcDirs = ['test']
        }
    }
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.19.0'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:2.18.1'
    implementation 'org.slf4j:slf4j-api:2.0.9'
    implementation 'org.slf4j:slf4j-simple:2.0.9'
    implementation 'org.bouncycastle:bcprov-jdk18on:1.79'
    implementation 'org.bouncycastle:bcpkix-jdk18on:1.79'
    implementation 'com.macasaet.fernet:fernet-java8:1.4.2'
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
    
    // Use Glassfish JSON implementation (includes the API)
    implementation 'org.glassfish:jakarta.json:2.0.1'
    
    // Use jose4j but exclude its transitive jakarta.json-api dependency
    implementation('org.bitbucket.b_c:jose4j:0.9.6') {
        exclude group: 'jakarta.json', module: 'jakarta.json-api'
    }
    
    // Test dependencies
    // JUnit 5 (Jupiter)
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
    testImplementation 'org.junit.platform:junit-platform-launcher:1.10.2' // Added for compatibility with Mockito 5.x
    
    // JUnit 4 (for backward compatibility with existing tests)
    testImplementation 'junit:junit:4.13.2'
    // Allows JUnit 4 tests to run with JUnit 5
    testImplementation 'org.junit.vintage:junit-vintage-engine:5.10.2'
    testImplementation 'org.mockito:mockito-core:5.19.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.19.0'
    // Explicitly specify ByteBuddy version for Java 21 compatibility
    testImplementation 'net.bytebuddy:byte-buddy:1.14.11'
    testImplementation 'net.bytebuddy:byte-buddy-agent:1.14.11'
}

// Configure test task to use JUnit Platform
test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        showStandardStreams = true  // Show stdout and stderr
        showExceptions = true
        showCauses = true
        showStackTraces = true
        exceptionFormat = 'full'
    }
    // Force test output synchronization
    systemProperty "org.slf4j.simpleLogger.logFile", "System.err"
    
    // Set default log level to debug for all classes
    systemProperty "org.slf4j.simpleLogger.defaultLogLevel", "debug"
    
    // Set log level for specific packages if needed
    systemProperty "org.slf4j.simpleLogger.log.com.isfs.blekey", "debug"
}

// JaCoCo configuration
jacoco {
    toolVersion = "0.8.11" 
}

// Configure JaCoCo test report
jacocoTestReport {
    dependsOn test
    
    reports {
        xml.required = true  // Generate XML report for CI tools
        csv.required = false
        html.required = true  // Generate HTML report for human readability
    }

    sourceDirectories.setFrom(files(sourceSets.main.java.srcDirs))
    classDirectories.setFrom(files(sourceSets.main.output.classesDirs))
    executionData.setFrom(files("${buildDir}/jacoco/test.exec"))
}

// Create a task to run tests with coverage
task testWithCoverage(dependsOn: [test, jacocoTestReport]) {
    group = 'Verification'
    description = 'Runs tests and generates coverage reports'
}

// JavaDoc configuration
tasks.register('libJavadoc', Javadoc) {
    description = 'Generates Javadoc API documentation for the lib code.'
    source = sourceSets.main.allJava
    classpath = configurations.compileClasspath
    options.memberLevel = JavadocMemberLevel.PROTECTED
    options.addStringOption('Xdoclint:none', '-quiet')
    options.encoding = 'UTF-8'
    options.charSet = 'UTF-8'
    options.links = ['https://docs.oracle.com/en/java/javase/17/docs/api/']
    title = "FIDO BLE HID Library API Documentation"
}

// Run copyright check before build
tasks.withType(JavaCompile) {
    dependsOn checkCopyrightHeaders
}

// Made with Bob